--- a/flow-kit/src/main/res/values/strings.xml
+++ b/flow-kit/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="zf_cr_crash_reporter">CrashReporter</string>
     <string name="zf_cr_crashes">Crashes</string>
     <string name="zf_cr_exceptions">Exceptions</string>
     <string name="zf_cr_view_crash_report">View Crash Report</string>
     <string name="zf_cr_check_your_message_here">Check your crashes and exceptions here.</string>
     <string name="zf_cr_delete_confirmation_msg">Are you sure to delete all the crash logs</string>
-    <string name="zf_cr_cancel">CANCEL</string>
-    <string name="zf_cr_ok">OK</string>
+    <string name="zf_cr_cancel" tools:ignore="ButtonCase">Cancel</string>
+    <string name="zf_cr_ok" tools:ignore="ButtonCase">Ok</string>
 </resources>
